--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #4b4b4b ;
+}
+
+.expense-item{
+    margin: 1rem 0;
+}
+
+.expense-item__description{
+   flex: 1;
+}
+.expense-item h2{
+   margin: 0 1rem;
+   flex: 1;
+}
+
+ .expenses {
+    padding: 1rem;
+    background-color: rgb(31, 31, 31);
+    margin: 2rem auto;
+    width: 50rem;
+    max-width: 95%;
+    border-radius: 12px;
+}
